[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
requests = "^2.27.1"
discord = "^1.7.3"
pyjokes = "^0.6.0"
jishaku = "^2.4.0"
colorama = "^0.4.4"
discord-buttons-plugin = "^0.1.2"
psutil = "^5.9.0"
functions = "^0.7.0"
humanfriendly = "^10.0"
httpx = "^0.23.0"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"